<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic-Video-Chat</string>
    <string name="action_settings">Settings</string>

    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="cycleCamera">cycle Camera</string>
    <string name="pubAudioToggle">publisher audio on</string>
    <string name="pubVideoToggle">publisher video on</string>

</resources>
