<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="connect"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="connect"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="disconnect"
        android:text="@string/disconnect"
        app:layout_constraintStart_toEndOf="@+id/connect"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cycleCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="cycleCamera"
        android:text="@string/cycleCamera"
        app:layout_constraintStart_toEndOf="@+id/disconnect"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pubAudioToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="pubAudioToggle"
        android:text="@string/pubAudioToggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect" />

    <Button
        android:id="@+id/pubVideoToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="pubVideoToggle"
        android:text="@string/pubVideoToggle"
        app:layout_constraintStart_toEndOf="@+id/pubAudioToggle"
        app:layout_constraintTop_toBottomOf="@+id/disconnect" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/subscriber_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <FrameLayout
            android:id="@+id/publisher_container"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="#CCCCCC"
            android:padding="2dp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
